--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,14 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
 
-  <body>
-    <%= render partial: 'shared/nav' %>
+  <body class="site">
+      <%= render partial: 'shared/nav' %>
 
-    <%= yield %>
-
+      <main class="site-content">
+        <%= yield %>
+      </main>
+      
+      <%= render partial: 'shared/footer' %>
+    </div>
   </body>
 </html>
