--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -5,7 +5,7 @@
       <span class="is-size-3">Goose</span>
     </a>
 
-    <a href="" class="navbar-burger">
+    <a href="" class="navbar-burger has-text-light">
       <span></span>
       <span></span>
       <span></span>
