Add footer quote

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="footer has-background-dark">
   <div class="content has-text-centered has-text-light">
-    We let loose the goose!
+    <%= footer_quote %>
   </div>
 </footer>
