Add flight search form

--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,2 +1,12 @@
-<p>flights#index</p>
-<p class='has-text-primary'>If this is green, Bulma is working!</p>
+<section>
+  <h1 class="is-size-2 has-text-centered py-6">Find Flights</h1>
+
+  <div class="container">
+    <%= render partial: 'search_form' %>
+  </div>
+
+<% if false %>
+  <p class='has-text-primary'>If this is green, Bulma is working!</p>
+<% end %>
+  
+</section>
