--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -2,11 +2,13 @@
   <h1 class="is-size-2 has-text-centered py-6">Find Flights</h1>
 
   <div class="container">
-    <%= render partial: 'search_form' %>
+    <%= render partial: 'search_form', locals: { airports: @airports, airport_options: @airport_options } %>
   </div>
-
-<% if false %>
-  <p class='has-text-primary'>If this is green, Bulma is working!</p>
-<% end %>
   
+</section>
+
+<section>
+  <div class="container">
+    <%= render partial: 'search_results', locals: { search_results: @flight_search_results } %>
+  </div>
 </section>
