--- a/app/views/flights/_search_results.html.erb
+++ b/app/views/flights/_search_results.html.erb
@@ -5,7 +5,7 @@
 
   <% search_results.each do |flight| %>
     <br>
-    <%= flight.departure_airport.code %> -> <%= flight.arrival_airport.code %> on <%= flight.start_datetime %> for <%= flight.duration %> minutes.
+    <%= flight.departure_airport.code %> -> <%= flight.arrival_airport.code %> on <%= flight.local_departure_time %> for <%= flight.duration %> minutes.
   <% end %>
 <% else %>
   No results.
