--- a/app/views/flights/_search_form.html.erb
+++ b/app/views/flights/_search_form.html.erb
@@ -2,8 +2,8 @@
   <div class="field">
     <%= form.label :from, 'From', class: 'label'%>
 
-    <div class="select">
-      <%= select_tag :departure_airport_id, options_for_select(airport_options), include_blank: true, required: true %>
+    <div class="select" >
+      <%= select_tag :departure_airport_id, options_for_select(airport_options, params[:departure_airport_id]), include_blank: true, required: true %>
     </div>
   </div>
 
@@ -11,7 +11,7 @@
     <%= form.label :to, 'To', class: 'label'%>
 
     <div class="select">
-      <%= select_tag :arrival_airport_id, options_for_select(airport_options), include_blank: true, required: true %>
+      <%= select_tag :arrival_airport_id, options_for_select(airport_options, params[:arrival_airport_id]), include_blank: true, required: true %>
     </div>
   </div>
 
@@ -25,7 +25,7 @@
 
   <div class="field">
     <%= form.label :date, 'Departure Date', class: 'label' %>
-    <%= form.date_field :depature_date, class: 'input' %>
+    <%= form.date_field :departure_date, value: params[:departure_date] || Date.today, class: 'input' %>
   </div>
 
   <%= form.submit 'Search', class: 'button' %>
