Remove extra variable

--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -4,7 +4,7 @@
   <h1 class="is-size-2 has-text-centered py-6">Find Flights</h1>
 
   <div class="container">
-    <%= render partial: 'search_form', locals: { airports: @airports, airport_options: @airport_options } %>
+    <%= render partial: 'search_form', locals: { airport_options: @airport_options } %>
   </div>
   
 </section>
