--- a/app/views/flights/_search_results.html.erb
+++ b/app/views/flights/_search_results.html.erb
@@ -5,7 +5,8 @@
 
   <% flights.each do |flight| %>
     <br>
-    <%= flight.departure_airport.code %> -> <%= flight.arrival_airport.code %> on <%= flight.local_departure_time %> for <%= flight.duration %> minutes.
+    <%= flight.departure_airport.code %> <%= display_datetime(flight.local_departure_time) %> 
+    -> <%= flight.arrival_airport.code %> <%= display_datetime(flight.local_arrival_time) %> (<%= flight.duration %> minutes).
   <% end %>
 <% else %>
   No results.
