Prevent searching flights to and from the same airport

--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -2,6 +2,8 @@
   <%= params %>  
 <% end %>
 
+<%= render partial: 'shared/flash' %>
+
 <section>
   <h1 class="is-size-2 has-text-centered py-4">Find Flights</h1>
 
