Add booking creation
- Bookings can be saved with very rough, rudimentary values
- First commit where this works but needs further cleanup

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,3 +1,15 @@
 <h1>booking#new</h1>
 
 <%= params %>
+
+<br>
+Booking <%= @booking.passengers.length %> passengers for flight:
+<br>
+
+<%= summary(@flight) %>
+
+<div class="section">
+  <div class="container">
+    <%= render partial: 'form', locals: { flight: @flight, booking: @booking } %>
+  </div>
+</div>
