--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,14 +1,13 @@
-<h1>booking#new</h1>
-
-<%= params %>
-
-<br>
-Booking <%= @booking.passengers.length %> passengers for flight:
-<br>
-
-<%= summary(@flight) %>
+<% if false %>
+  <%= params %>  
+<% end %>
 
 <div class="section">
+  <h1 class="is-size-2 has-text-centered py-4">Flight Booking Details</h1>
+  <div class="container has-text-centered">
+    <%= summary(@flight) %>
+  </div>
+
   <div class="container">
     <%= render partial: 'form', locals: { flight: @flight, booking: @booking } %>
   </div>
