Add confirmation lookup placeholder pages

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,1 +1,6 @@
-<h1>booking#show</h1>
+<div class="section">
+  <h1>booking#show</h1>
+  <p>Showing booking for: <%= @booking.confirmation_code %></p>
+  <p>Name: <%= @booking.name %></p>
+  <p>Email: <%= @booking.email %></p>
+</div>
