--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,9 +1,9 @@
 <nav class="navbar has-background-dark is-transparent">
   <div class="navbar-brand">
-    <a href="" class="navbar-item has-text-light ">
+    <%= link_to flights_path, class: "navbar-item has-text-light" do %>
       <i class="fa-solid fa-feather pr-4 logo-icon"></i>
       <span class="is-size-3">Goose</span>
-    </a>
+    <% end %>
 
     <a href="" class="navbar-burger has-text-light">
       <span></span>
@@ -14,10 +14,10 @@
 
   <div class="navbar-menu">
     <div class="navbar-end">
-      <a href="" class="navbar-item has-text-light">
+      <%= link_to bookings_path, class: "navbar-item has-text-light" do %>
         <i class="fa-solid fa-search pr-2"></i>
         <span>Lookup Confirmation</span>
-      </a>
+      <% end %>
     </div>
   </div>
 </nav>
