Add booking confirmation lookup

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 
   <body class="site">
       <%= render partial: 'shared/nav' %>
+      <%= render partial: 'shared/flash' %>
 
       <main class="site-content">
         <%= yield %>
