--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,1 +1,7 @@
-<h1>booking#index</h1>
+<section>
+  <h1 class="is-size-2 has-text-centered py-4">Booking Lookup</h1>
+
+  <div class="container">
+    <%= render partial: 'search_form' %>
+  </div>
+</section>
