--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -5,7 +5,7 @@
 <div class="section">
   <h1 class="is-size-2 has-text-centered py-4">Flight Booking Details</h1>
   <div class="container has-text-centered">
-    <%= summary(@flight) %>
+    <%= flight_summary(@flight) %>
   </div>
 
   <div class="container">
