Remove params scope from GET requests

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -3,7 +3,7 @@
 
   <div class="container">
     <p>Flight:</p>
-    <p id='<%= dom_id(booking) %>'><%= flight_summary(@booking.flight) %></p>
+    <p id='<%= dom_id(@booking) %>'><%= flight_summary(@booking.flight) %></p>
 
     <p class=pt-4>Confirmation Code:</p>
     <p><%= @booking.confirmation_code %></p>
