--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -4,8 +4,8 @@
 
 <div class="section">
   <h1 class="is-size-2 has-text-centered py-4">Flight Booking Details</h1>
-  <div class="container has-text-centered">
-    <%= flight_summary(@flight) %>
+  <div class="columns is-centered">
+    <%= render partial: 'flights/summary', locals: { flight: @flight } %>
   </div>
 
   <div class="container">
