--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -10,7 +10,7 @@
       <%= render partial: 'flights/summary', locals: { flight: @booking.flight } %>   
     </div>
 
-    <p class=pt-4>Confirmation Code:</p>
+    <p class="pt-4">Confirmation Code:</p>
     <p><%= @booking.confirmation_code %></p>
 
     <p class="pt-4">Booked By:</p>
