--- a/app/views/flights/_summary.html.erb
+++ b/app/views/flights/_summary.html.erb
@@ -1,5 +1,5 @@
-<div class='is-flex is-align-items-center has-flex-gap-1'>
-  <div class="has-text-centered">
+<div class='is-flex is-align-items-center has-flex-gap-20'>
+  <div class="has-text-centered is-flex-grow-1">
     <div class="is-size-4 has-text-weight-bold">
       <%= flight.departure_airport.code %>
     </div>
@@ -9,7 +9,7 @@
     </div>
   </div>
 
-  <div class="has-text-centered">
+  <div class="has-text-centered is-flex-grow-1">
     <div class="has-text-weight-bold is-size-4">
       <i class="fa-solid fa-arrow-right"></i>
       <i class="fa-solid fa-plane"></i>
@@ -20,7 +20,7 @@
     </div>
   </div>
 
-  <div class="has-text-centered">
+  <div class="has-text-centered is-flex-grow-1">
     <div class="is-size-4 has-text-weight-bold">
       <%= flight.arrival_airport.code %>
     </div>
