--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,34 +1,41 @@
 <%= form_with model: booking do |form| %>
-  <p class="is-size-4 has-text-weight-bold">Booking Contact:</p>
+  <div class="columns is-centered">
+    <p class="column is-4 is-size-4 has-text-weight-bold">Booking Contact:</p>
+    <div class="column is-4 px-0 py-0"></div>
+  </div>
   
-  <div class="columns">
-    <div class="column is-6">
+  <div class="columns is-centered">
+    <div class="column is-4">
       <%= form.label :name, 'Name', class: 'label' %>
       <%= form.text_field :name, class: 'input', placeholder: 'Name' %>
     </div>
 
-    <div class="column is-6">
+    <div class="column is-4">
       <%= form.label :email, 'Email', class: 'label' %>
       <%= form.email_field :email, class: 'input', placeholder: 'Email' %>
     </div>
   </div>
 
-  <div class="block is-size-4 has-text-weight-bold mb-1">Passenger Details:</div>
+  <div class="columns is-centered">
+    <div class="column is-4 is-size-4 has-text-weight-bold mb-0">Passenger Details:</div>
+    <div class="column is-4 px-0 py-0"></div>
+  </div>
 
   <%= form.fields_for :passengers do |passengers_form| %>
-    <div class="columns mb-0">
-      <div class="column is-size-5 has-text-weight-bold mb-0 pb-0">
+    <div class="columns is-centered">
+      <div class="column is-4 is-size-5 has-text-weight-bold mb-0 pb-0">
         <%= "Passenger #{passengers_form.index + 1}" %>
       </div>
+      <div class="column is-4 px-0 py-0"></div>
     </div>
 
-    <div class="columns mt-0">
-      <div class="column is-6 pt-1">
+    <div class="columns is-centered">
+      <div class="column is-4 pt-1">
         <%= passengers_form.label :name, 'Name', class: 'label' %>
         <%= passengers_form.text_field :name, class: 'input', placeholder: 'Name' %>
       </div>
 
-      <div class="column is-6 pt-1">
+      <div class="column is-4 pt-1">
         <%= passengers_form.label :email, 'Email', class: 'label' %>
         <%= passengers_form.email_field :email, class: 'input', placeholder: "Email" %>
       </div>
@@ -36,5 +43,7 @@
   <% end %>
 
   <%= form.hidden_field :flight_id, value: booking.flight_id %>
-  <%= form.submit 'Book Flight', class: 'button' %>
+  <div class="has-text-centered">
+    <%= form.submit 'Book Flight', class: 'button' %>
+  </div>
 <% end %>
