--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -10,15 +10,15 @@
       <%= render partial: 'flights/summary', locals: { flight: @booking.flight } %>   
     </div>
 
-    <p class="pt-4">Confirmation Code:</p>
-    <p><%= @booking.confirmation_code %></p>
+    <p class="is-size-4 has-text-weight-bold has-text-centered pt-4">Confirmation Code:</p>
+    <p class="is-size-4 has-text-centered"><%= @booking.confirmation_code %></p>
 
-    <p class="pt-4">Booked By:</p>
-    <p><%= @booking.name %> (<%= @booking.email %>)</p>
+    <p class="is-size-4 has-text-weight-bold has-text-centered pt-4">Booked By:</p>
+    <p class="is-size-4 has-text-centered"><%= @booking.name %> (<%= @booking.email %>)</p>
 
-    <p class="pt-4">Passengers:</p>
+    <p class="is-size-4 has-text-weight-bold has-text-centered pt-4">Passengers:</p>
     <% @booking.passengers.each do |passenger| %>
-        <p><%= passenger.name %> (<%= passenger.email %>)</p>
+        <p class="is-size-4 has-text-centered"><%= passenger.name %> (<%= passenger.email %>)</p>
     <% end %>
   </div>
 </section>
