Small rebranding for clarity

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -2,7 +2,7 @@
   <div class="navbar-brand">
     <%= link_to flights_path, data: { turbo: false }, class: "navbar-item has-text-light" do %>
       <i class="fa-solid fa-feather pr-4 logo-icon"></i>
-      <span class="is-size-3">Goose</span>
+      <span class="is-size-3">Goose Air</span>
     <% end %>
 
     <a class="navbar-burger has-text-light" id="burger">
