Fix layout issues
- Add section class to section elements to improve padding
- Adjust top/bottom section padding to lessen whitespace

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,6 +1,6 @@
-<section>
-  <h1 class="is-size-2 has-text-centered py-4">Booking Lookup</h1>
+<h1 class="is-size-2 has-text-centered py-4">Booking Lookup</h1>
 
+<section class="section">
   <div class="container">
     <%= render partial: 'search_form' %>
   </div>
