--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,9 +1,11 @@
-<div class="section">
-  <h1 class="is-size-2 has-text-centered py-4">Flight Booking Details</h1>
-  <div class="columns is-centered">
-    <%= display_departure_date(@booking.flight.local_departure_time) %>   
-  </div>
 
+<h1 class="is-size-2 has-text-centered py-4">Flight Booking Details</h1>
+
+<p class="has-text-centered">
+    <%= display_departure_date(@booking.flight.local_departure_time) %>   
+</p>
+
+<section class="section pt-3">
   <div class="columns is-centered">
     <%= render partial: 'flights/summary', locals: { flight: @flight } %>
   </div>
@@ -11,4 +13,4 @@
   <div class="container">
     <%= render partial: 'form', locals: { flight: @flight, booking: @booking } %>
   </div>
-</div>
+</section>
